fix #606 header too large

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,7 +13,7 @@
   }
 
   .header {
-    font-size: 10vw;
+    font-size: 7vw;
   }
 
   .description {
